--- a/UI/src/app/component/export-excel/export-excel.component.html
+++ b/UI/src/app/component/export-excel/export-excel.component.html
@@ -66,7 +66,7 @@
                 {{rowData[column]?.length > 60 ? (rowData[column].slice(0,60)+'...') : rowData[column]}}
               </ng-container>
               <ng-container *ngSwitchCase="'date'">
-                {{rowData[column] | date: 'yyyy-MM-dd'}}
+                {{rowData[column] | isoDateFormat}}
               </ng-container>
             </ng-container>
           </td>
