--- a/UI/src/styles.css
+++ b/UI/src/styles.css
@@ -2052,3 +2052,6 @@ p-dialog .p-button-cancel.p-button-secondary {
 .list-style-none{
   list-style-type: none;
 }
+.color-blue{
+  color : #06a0ff;
+}
