--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
@@ -88,7 +88,7 @@
         </div>
         <div class="p-w-100" [ngSwitch]="kpiDataStatusCode">
           <h4 *ngSwitchCase="'400'" class="p-text-center">KPI Analysis failed. Contact your administrator.</h4>
-          <h4 *ngSwitchCase="'202'" class="p-text-center">Required Tool not configured. Contact your administrator.</h4>
+          <h4 *ngSwitchCase="'202'" class="p-text-center">Please check the required tool configuration and run processor.</h4>
           <h4 *ngSwitchCase="'201'" class="p-text-center">Mandatory Field Mapping not configured. Contact your
             administrator.</h4>
           <h4 *ngSwitchCase="'200'" class="p-text-center">No Data Available.</h4>
@@ -101,7 +101,7 @@
         </div>
         <div class="p-w-100" [ngSwitch]="kpiDataStatusCode">
           <h4 *ngSwitchCase="'400'" class="p-text-center">KPI Analysis failed. Contact your administrator.</h4>
-          <h4 *ngSwitchCase="'202'" class="p-text-center">Required Tool not configured. Contact your administrator.</h4>
+          <h4 *ngSwitchCase="'202'" class="p-text-center">Please check the required tool configuration and run processor.</h4>
           <h4 *ngSwitchCase="'201'" class="p-text-center">Mandatory Field Mapping not configured. Contact your
             administrator.</h4>
           <h4 *ngSwitchCase="'200'" class="p-text-center">No Data Available.</h4>
