DTS-41727 : mandatory check added for radio btn and removed reset functionalty for radio

--- a/UI/src/app/shared-module/field-mapping-field/field-mapping-field.component.html
+++ b/UI/src/app/shared-module/field-mapping-field/field-mapping-field.component.html
@@ -35,12 +35,12 @@
     <div class="p-d-flex p-justify-between" *ngSwitchCase="'radiobutton'">
         <div class="p-inputgroup">
             <ng-container *ngFor="let opt of fieldConfig.options">
-                <p-radioButton placeholder="Select" [value]="opt.value" label="{{opt.label}}" class="p-m-2"
+                <p-radioButton placeholder="Select" [value]="opt.value" label="{{opt.label}}" class="p-m-2" [required]="fieldConfig?.mandatory"
                     [name]="fieldConfig?.fieldName" [(ngModel)]="value" (onClick)="setValue()">
                 </p-radioButton>
             </ng-container>
         </div>
-        <button pButton pRipple type="button" label="Reset" class="p-button-raised" (click)="resetRadioButton()"></button>
+        <!-- <button pButton pRipple type="button" label="Reset" class="p-button-raised" (click)="resetRadioButton()"></button> -->
     </div>
 
     <div *ngSwitchCase="'multiselect'">
