--- a/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
+++ b/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
@@ -15,7 +15,8 @@
   limitations under the License.
 
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<ng-container *ngIf="(!noProjects[selectedtype]); else noProjectsTemplate">
+<ng-container
+    *ngIf="(!noProjects[selectedtype]); else noProjectsTemplate">
     <div *ngIf="!noKpis; else noKpiTemplate">
         <ng-container *ngIf="!noFilterApplyData; else noFilterApplyDataTemplate">
             <div id="message"></div>
@@ -64,7 +65,7 @@
                                                             <ng-container *ngIf="!(showChart === 'table')">
 
                                                                 <ng-container *ngSwitchCase="'stackedColumn'">
-                                                                    <ng-container *ngIf="checkIfZeroData(kpi)">
+                                                                    <ng-container *ngIf="checkIfDataPresent(kpi)">
                                                                         <app-groupstackchartv2 [legendType]="'normal'"
                                                                             [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] : kpi?.kpiDetail?.xaxisLabel"
                                                                             [yCaption]="checkYAxis(kpi)"
@@ -77,7 +78,7 @@
                                                                             [selectedtype]="selectedtype"
                                                                             [isAggregationStacks]="(kpi?.kpiDetail?.isAggregationStacks === false) ? false : true"></app-groupstackchartv2>
                                                                     </ng-container>
-                                                                    <ng-container *ngIf="!checkIfZeroData(kpi)">
+                                                                    <ng-container *ngIf="!checkIfDataPresent(kpi)">
                                                                         <ng-container
                                                                             *ngTemplateOutlet="partialData; context:  { $implicit: kpi}">
                                                                         </ng-container>
@@ -92,7 +93,7 @@
                                                                     [showMarkerColumnNumber]="0"></app-table>
 
                                                                 <ng-container *ngSwitchCase="'line'">
-                                                                    <ng-container *ngIf="checkIfZeroData(kpi)">
+                                                                    <ng-container *ngIf="checkIfDataPresent(kpi)">
                                                                         <app-multiline-v2
                                                                             [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
                                                                             [unit]="kpi?.kpiDetail?.kpiUnit"
@@ -107,38 +108,28 @@
                                                                             [upperThresholdBG]="kpi?.kpiDetail?.upperThresholdBG">
                                                                         </app-multiline-v2>
                                                                     </ng-container>
-                                                                    <ng-container *ngIf="!checkIfZeroData(kpi)">
+                                                                    <ng-container *ngIf="!checkIfDataPresent(kpi)">
                                                                         <ng-container
                                                                             *ngTemplateOutlet="partialData; context:  { $implicit: kpi}">
                                                                         </ng-container>
                                                                     </ng-container>
                                                                 </ng-container>
 
-                                                                <ng-container *ngSwitchCase="'multipleline'">
-                                                                    <ng-container *ngIf="checkIfZeroData(kpi)">
-                                                                        <app-multiline-style-v2
-                                                                            [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
-                                                                            [unit]="kpi?.kpiDetail?.kpiUnit"
-                                                                            [data]="kpiChartData[kpi?.kpiId]"
-                                                                            [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] : kpi?.kpiDetail?.xaxisLabel"
-                                                                            [yCaption]="kpi?.kpiDetail?.yaxisLabel"
-                                                                            [name]="kpi?.kpiName" [kpiId]="kpi?.kpiId"
-                                                                            [color]="chartColorList[kpi?.kpiId]"
-                                                                            [selectedtype]="selectedtype"
-                                                                            [viewType]="showChart">
-                                                                        </app-multiline-style-v2>
-                                                                    </ng-container>
-                                                                    <ng-container *ngIf="!checkIfZeroData(kpi)">
-                                                                        <ng-container
-                                                                            *ngTemplateOutlet="partialData; context:  { $implicit: kpi}">
-                                                                        </ng-container>
-                                                                    </ng-container>
-                                                                </ng-container>
-
+                                                                <app-multiline-style-v2 *ngSwitchCase="'multipleline'"
+                                                                    [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
+                                                                    [unit]="kpi?.kpiDetail?.kpiUnit"
+                                                                    [data]="kpiChartData[kpi?.kpiId]"
+                                                                    [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] : kpi?.kpiDetail?.xaxisLabel"
+                                                                    [yCaption]="kpi?.kpiDetail?.yaxisLabel"
+                                                                    [name]="kpi?.kpiName" [kpiId]="kpi?.kpiId"
+                                                                    [color]="chartColorList[kpi?.kpiId]"
+                                                                    [selectedtype]="selectedtype"
+                                                                    [viewType]="showChart">
+                                                                </app-multiline-style-v2>
 
                                                                 <ng-container
                                                                     *ngSwitchCase="'grouped_column_plus_line'">
-                                                                    <ng-container *ngIf="checkIfZeroData(kpi)">
+                                                                    <ng-container *ngIf="checkIfDataPresent(kpi)">
                                                                         <app-grouped-column-plus-line-chart-v2
                                                                             [data]="kpiChartData[kpi?.kpiId]"
                                                                             [lineChart]="kpi?.kpiDetail?.lineChart"
@@ -157,7 +148,7 @@
                                                                             [board]="selectedTab">
                                                                         </app-grouped-column-plus-line-chart-v2>
                                                                     </ng-container>
-                                                                    <ng-container *ngIf="!checkIfZeroData(kpi)">
+                                                                    <ng-container *ngIf="!checkIfDataPresent(kpi)">
                                                                         <ng-container
                                                                             *ngTemplateOutlet="partialData; context:  { $implicit: kpi}">
                                                                         </ng-container>
@@ -165,7 +156,7 @@
                                                                 </ng-container>
 
                                                                 <ng-container *ngSwitchCase="'bar-with-y-axis-group'">
-                                                                    <ng-container *ngIf="checkIfZeroData(kpi)">
+                                                                    <ng-container *ngIf="checkIfDataPresent(kpi)">
                                                                         <app-bar-with-y-axis-group
                                                                             [data]="kpiChartData[kpi?.kpiId]"
                                                                             [lineChart]="true"
@@ -183,7 +174,7 @@
                                                                             [yAxisOrder]="kpi?.kpiDetail?.yaxisOrder">
                                                                         </app-bar-with-y-axis-group>
                                                                     </ng-container>
-                                                                    <ng-container *ngIf="!checkIfZeroData(kpi)">
+                                                                    <ng-container *ngIf="!checkIfDataPresent(kpi)">
                                                                         <ng-container
                                                                             *ngTemplateOutlet="partialData; context:  { $implicit: kpi}">
                                                                         </ng-container>
@@ -207,7 +198,7 @@
 
                                                                 <ng-container
                                                                     *ngSwitchCase="'horizontalPercentBarChart'">
-                                                                    <ng-container *ngIf="checkIfZeroData(kpi)">
+                                                                    <ng-container *ngIf="checkIfDataPresent(kpi)">
                                                                         <app-horizontal-percent-bar-chartv2
                                                                             [kpiId]="kpi?.kpiId"
                                                                             [kpiWidth]="kpi?.kpiDetail?.kpiWidth"
@@ -215,18 +206,18 @@
                                                                             [activeTab]="activeIndex">
                                                                         </app-horizontal-percent-bar-chartv2>
                                                                     </ng-container>
-                                                                    <ng-container *ngIf="!checkIfZeroData(kpi)">
+                                                                    <ng-container *ngIf="!checkIfDataPresent(kpi)">
                                                                         <ng-container
                                                                             *ngTemplateOutlet="partialData; context:  { $implicit: kpi}">
                                                                         </ng-container>
                                                                     </ng-container>
                                                                 </ng-container>
                                                                 <ng-container *ngSwitchCase="'pieChart'">
-                                                                    <ng-container *ngIf="checkIfZeroData(kpi)">
+                                                                    <ng-container *ngIf="checkIfDataPresent(kpi)">
                                                                         <app-piechart
                                                                             [data]="kpiChartData[kpi?.kpiId]"></app-piechart>
                                                                     </ng-container>
-                                                                    <ng-container *ngIf="!checkIfZeroData(kpi)">
+                                                                    <ng-container *ngIf="!checkIfDataPresent(kpi)">
                                                                         <ng-container
                                                                             *ngTemplateOutlet="partialData; context:  { $implicit: kpi }">
                                                                         </ng-container>
@@ -247,11 +238,11 @@
 
 
                                                                 <ng-container *ngSwitchCase="'stacked-area'">
-                                                                    <ng-container *ngIf="checkIfZeroData(kpi)">
+                                                                    <ng-container *ngIf="checkIfDataPresent(kpi)">
                                                                         <app-stacked-area-chart [kpiId]="kpi?.kpiId"
                                                                             [data]="kpiChartData[kpi?.kpiId]"></app-stacked-area-chart>
                                                                     </ng-container>
-                                                                    <ng-container *ngIf="!checkIfZeroData(kpi)">
+                                                                    <ng-container *ngIf="!checkIfDataPresent(kpi)">
                                                                         <ng-container
                                                                             *ngTemplateOutlet="partialData; context:  { $implicit: kpi }">
                                                                         </ng-container>
@@ -279,7 +270,7 @@
                                                 <ng-container>
                                                     <ng-template #showTable>
                                                         <div class="p-d-flex p-justify-around p-align-center w-100 p-h-100"
-                                                            *ngIf="checkIfZeroData(kpi);else noDataAccess">
+                                                            *ngIf="checkIfDataPresent(kpi);else noDataAccess">
                                                             <ng-container
                                                                 *ngFor="let item of kpiChartData[kpi.kpiId]; let index=index">
                                                                 <ng-container
