--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -105,22 +105,22 @@
       <span class="icon-container p-d-inline-block p-mr-2" (click)="toggleShowHideMenu($event)">
         <i class="pi pi-pause" style="font-size: 1rem"></i>
       </span>
-      <p-multiSelect #showHideDdn [styleClass]="'showHideDdn'" [options]="masterData['kpiList']" optionLabel="kpiName">
+      <p-multiSelect #showHideDdn [styleClass]="'showHideDdn'" [options]="masterDataCopy['kpiList']" optionLabel="kpiName">
         <ng-template pTemplate="header">
           <p-checkbox [styleClass]="'showHideDdnSelectAll'" name="showHideSelectAll" [(ngModel)]="showHideSelectAll"
-            [binary]="true" (onChange)="showHideSelectAllApply();enableShowHideApply = false;"></p-checkbox>
+            [binary]="true" (onChange)="showHideSelectAllApply();disableShowHideApply = false;"></p-checkbox>
         </ng-template>
         <ng-template let-option pTemplate="item">
           <div class="filter-item">
             <p-checkbox name="{{ option.kpiId }}" [(ngModel)]="option.isEnabled" [binary]="true"
-              (onChange)="enableShowHideApply = false; showHideSelectAll = false;"></p-checkbox>
+              (onChange)="disableShowHideApply = false; showHideSelectAll = false;"></p-checkbox>
             <span>{{option.kpiName}}</span>
           </div>
         </ng-template>
         <ng-template pTemplate="footer">
           <div class="p-p-3 p-text-right">
             <p-button label="Apply" (onClick)="showHideKPIs()" [style]="{backgroundColor: '#0B4BC8'}"
-              [disabled]="enableShowHideApply"></p-button>
+              [disabled]="disableShowHideApply"></p-button>
           </div>
         </ng-template>
       </p-multiSelect>
