DTS-41133 updated implementaition

--- a/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
+++ b/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
@@ -361,7 +361,7 @@
                                                 <img alt="no-data" src="../../../assets/img/NoDataFound.svg" />
                                             </div>
                                             <div class="p-w-100">
-                                                <h4 class="p-text-center">No Data Available.</h4>
+                                                <h4 class="p-text-center">No Data Available%%.</h4>
                                             </div>
                                         </div>
                                     </ng-template>
