--- a/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
+++ b/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
@@ -15,7 +15,7 @@
   limitations under the License.
 
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-  <ng-container *ngIf="(!noProjects[selectedtype]); else noProjectsTemplate">
+<ng-container *ngIf="(!noProjects[selectedtype]); else noProjectsTemplate">
     <div *ngIf="!noKpis; else noKpiTemplate">
         <ng-container *ngIf="!noFilterApplyData; else noFilterApplyDataTemplate">
             <div id="message"></div>
@@ -192,17 +192,25 @@
 
                                                                 <ng-container
                                                                     *ngSwitchCase="'CumulativeMultilineChart'">
-                                                                    <app-group-bar-chart
-                                                                        [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] :kpi?.kpiDetail?.xaxisLabel"
-                                                                        [yCaption]="checkYAxis(kpi)"
-                                                                        [unit]="kpi?.kpiDetail?.kpiUnit"
-                                                                        [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
-                                                                        [data]="kpiChartData[kpi?.kpiId]"
-                                                                        [color]="chartColorList"
-                                                                        [releaseEndDate]="releaseEndDate"
-                                                                        [selectedtype]="selectedtype"
-                                                                        [kpiId]="kpi?.kpiId" [legendType]="'normal'">
-                                                                    </app-group-bar-chart>
+                                                                    <ng-container *ngIf="checkIfZeroData(kpi)">
+                                                                        <app-group-bar-chart
+                                                                            [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] :kpi?.kpiDetail?.xaxisLabel"
+                                                                            [yCaption]="checkYAxis(kpi)"
+                                                                            [unit]="kpi?.kpiDetail?.kpiUnit"
+                                                                            [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
+                                                                            [data]="kpiChartData[kpi?.kpiId]"
+                                                                            [color]="chartColorList"
+                                                                            [releaseEndDate]="releaseEndDate"
+                                                                            [selectedtype]="selectedtype"
+                                                                            [kpiId]="kpi?.kpiId"
+                                                                            [legendType]="'normal'">
+                                                                        </app-group-bar-chart>
+                                                                    </ng-container>
+                                                                    <ng-container *ngIf="!checkIfZeroData(kpi)">
+                                                                        <ng-container
+                                                                            *ngTemplateOutlet="partialData; context:  { $implicit: kpi}">
+                                                                        </ng-container>
+                                                                    </ng-container>
                                                                 </ng-container>
 
                                                                 <ng-container
@@ -361,7 +369,7 @@
                                                 <img alt="no-data" src="../../../assets/img/NoDataFound.svg" />
                                             </div>
                                             <div class="p-w-100">
-                                                <h4 class="p-text-center">No Data Available%%.</h4>
+                                                <h4 class="p-text-center">No Data Available.</h4>
                                             </div>
                                         </div>
                                     </ng-template>
