--- a/UI/src/app/component/kpi-card-v3/kpi-card-v3.component.css
+++ b/UI/src/app/component/kpi-card-v3/kpi-card-v3.component.css
@@ -1,5 +1,59 @@
-.chart-container {
+
+
+  .kpi-card-filter{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
   }
+
+
+
+  .kpi-card-title-container{
+    display: flex;
+  }
+
+  .kpi-card-title-container h3 {
+    margin-bottom: auto;
+    line-height: 32px;
+    margin-top: 0;
+}
+  
+.radio-group { display: flex; gap: 10px; } 
+.radio-group label { display: flex; align-items: center; gap: 5px; padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px; cursor: pointer; } 
+.radio-group input { display: none; } 
+.radio-group input:checked + label { background-color: #e0e0e0; border-color: #000; }
+
+
+:host .kpi-card-container {
+  background: #fff;
+  border: 1px solid #D5DBE1;
+  border-radius: 10px;
+  opacity: 1;
+  position: relative;
+  max-height: 500px;
+}
+
+:host .kpi-card-header {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #c0c0c0;
+  padding: 8px 10px;
+  letter-spacing: 0px;
+  align-items: center;
+  font-size: 20px;
+  color: #202429;
+  overflow: visible;
+}
+
+
+
+::ng-deep .kpi-filter .ng-placeholder {
+  top: 5px;
+}
+
+
+:host .kpi-card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
