--- a/UI/src/app/component/kpi-card-v3/kpi-card-v3.component.html
+++ b/UI/src/app/component/kpi-card-v3/kpi-card-v3.component.html
@@ -1,3 +1,39 @@
-<div class="chart-container"></div>
-<button (click)="filterData('Initial')">Filter Initial Commitment</button>
-<button (click)="filterData('Scope')">Filter Scope</button>
+<div class="kpi-card-container">
+  <div class="kpi-card-header">
+    <div class="kpi-card-title-container">
+        <h3 >{{cardData?.kpiName}}</h3>
+        <span *ngIf="cardData?.kpiInfo" aria-hidden="true" class="info-icon" (mouseover)="showTooltip(true)"
+          (mouseleave)="showTooltip(false)" [style]="{'position': 'relative'}">
+          <img alt="info" class="" src="../../../assets/img/Info.svg" />
+          <app-tooltip-v2 *ngIf="isTooltip" class="p-mt-3" [data]="cardData?.kpiInfo?.definition"
+            (mouseleave)="showTooltip(false)" [showChartView]="showChartView"
+            [kpiName]="cardData?.kpiName"></app-tooltip-v2>
+        </span>
+      </div>
+  </div>
+
+  <div class="kpi-card-body">
+    <div class="kpi-card-filter p-px-5 p-py-2">
+        <div id="">
+             <p-selectButton [options]="cardData.dataGroup.dataGroup1" [(ngModel)]="selectedKey"
+            optionLabel="name" optionValue="key"></p-selectButton> 
+        </div>
+        <div id="">
+            <ng-container class="p-p-1" *ngFor="let filter of cardData.filterGroup.filterGroup1">
+            <p-dropdown [options]="getOptions(filter?.filterKey)" [(ngModel)]="dropdownSelected[filter?.filterKey]" 
+            optionLabel="label" optionValue="value" (onChange)="handleChange()"
+             [filter]="true" [placeholder]="filter?.filterName"></p-dropdown>
+            </ng-container>
+        </div>
+    </div>
+    <div class="p-px-5 p-py-2">
+
+    </div>
+  </div>
+
+  <div class="kpi-card-footer p-pr-5 p-pl-5">
+  <!-- [ngClass]="{'hidden' : (loader || immediateLoader || (!checkIfDataPresent(kpiDataStatusCode) && !partialData) || (iSAdditionalFilterSelected || (!kpiData?.kpiDetail?.isAdditionalFilterSupport && iSAdditionalFilterSelected)))}"<app-trend-indicator-v2 *ngIf="checkIfDataPresent(kpiDataStatusCode)" [trendData]="trendData"
+    [colorObj]="trendBoxColorObj">
+  </app-trend-indicator-v2> -->
+</div>
+</div>
