--- a/UI/src/app/component/kpi-card-v3/kpi-card-v3.component.css
+++ b/UI/src/app/component/kpi-card-v3/kpi-card-v3.component.css
@@ -15,3 +15,33 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+
+.legend{
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0;
+  margin: 20px 0;
+}
+
+.legend li{
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: #333;
+}
+
+.legend li span{
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 8px;
+}
+
+.kpi-card-footer{
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+}
