--- a/UI/src/app/component/kpi-card-v3/kpi-card-v3.component.html
+++ b/UI/src/app/component/kpi-card-v3/kpi-card-v3.component.html
@@ -1,19 +1,20 @@
 <div class="kpi-card-container">
-  <app-ps-kpi-card-header [cardHeaderData]="cardData"></app-ps-kpi-card-header>
+  <app-ps-kpi-card-header [cardHeaderData]="kpiHeaderData"></app-ps-kpi-card-header>
 
   <div class="kpi-card-body">
     <app-ps-kpi-card-filter
-      [kpiCardFilter]="cardData"
+      [kpiCardFilter]="kpiFilterData"
       (filterChange)="onFilterChange($event)"
     ></app-ps-kpi-card-filter>
+    <div class="p-pr-5 p-pl-5"> {{cardData.dataGroup.summary.name}} {{test}}</div>
     <app-ps-kpi-card-chart-renderer
       [chartData]="currentChartData"
     ></app-ps-kpi-card-chart-renderer>
   </div>
 
-  <!-- <div class="kpi-card-footer p-pr-5 p-pl-5">
-    <ng-container *ngFor="let footer of KpiCategory">
-      {{ footer.categoryName }}
-    </ng-container>
-  </div> -->
+  <div class="kpi-card-footer p-pr-5 p-pl-5">
+    <ul class="legend" *ngFor="let footer of currentChartData">
+     <li class="p-p-3"> <span [ngStyle]="{'background-color': footer.color}"></span>{{footer.category}}</li>
+    </ul>
+  </div>
 </div>
